--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E456'
 - !lcsh 'Lincoln, Abraham, 1809-1865 -- Childhood and youth'
+- GITenberg
 title: The Story of Young Abraham Lincoln
 url: http://www.gutenberg.org/ebooks/22925
